styles/rsvp.css
@media (max-width: 1000px) {
    html {
        overflow: hidden;
    }
    
    body {
        overflow: scroll;
        padding-bottom: 20px;
        width: 100vw;
        height: 100vh;
    }

    main {
        margin-top: 20px;
        overflow: visible;
        height: 100vh;
    }

    #container {
        display: flex;
        flex-direction: column-reverse;
        align-items: center;
    }

    aside {
        width: 90vw;
    }

    article {
        width: 90vw;
    }

}

@media (max-height: 700px) {
    main {
        margin-top: 25vh;
    }
}


@media (min-height: 1000px) {
    main {
        margin: 0;
    }
}

@media (min-width: 1000px) {
    body {
        background-color: rgb(165, 145, 130);
    }

    main {
        overflow: scroll;
        margin: 0;
        height: 92vh;
    }

    #container {
        margin-top: 15vh;
    }

    article {
        float: left;
        border-right: 1px solid rgb(165, 145, 130);
        max-width: 50vw;
        width: 50vw;
        padding: 20px 20px 20px 40px;
    }

    aside {
        padding-left: 25px;
    }
}


body {
    margin: 0;
}

main {
    background-color: white;
    max-width: 100vw;
    max-height: 200vh;
    width: 100%;
    
    color:rgb(165, 145, 130);
    display:flex;
    justify-content: space-around;
    flex-direction: column;
}

main > div:first-of-type {
    position: relative;
    margin-top: 20vh;
    margin-bottom: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
}

main > div > h1 {
    font-size: 30px;
}

main > div > h3 {
    font-size: 24px;
}

main > div > span {
    border-top: 1px solid rgb(165, 145, 130);
    width: 50%;
}

aside {
    display: flex;
    flex-direction: column;
    
    align-items: center;
    justify-content: space-around;
}

form {
    display: grid;
    row-gap: 30px;
    column-gap: 5vw;
}

fieldset {
    margin: 0;
    padding: 0;
    padding-bottom: 2vh;
    border: 0px;
    display: grid;
    row-gap: 2vh;
    column-gap: 0;
}

fieldset > div {
    width: 3vw;
    height: 3vw;
}

fieldset > label > input {
    display: none;
}

fieldset > label {
    grid-column: 3;
    grid-row: 1;
    width: min-content;
    font-size: 30px;
    cursor: pointer;
}

